# employee-management-fastapi

./: .gitignore  README.md  droptable.txt  helper.md  struct.txt
backend/: .env  .gitignore  README.md  alembic.ini  helper.md  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 28f263dc0dca_upgrade_tables.py  2c3a7f1c9f2c_upgrade_tables.py  41e0fcff1294_init.py  653c1d5f1d04_add_password_verification.py  7d5318932773_init.py  8b66b966d720_add_refresh_token.py  9ee4687bed02_init.py  b18375282f45_add_verification_table.py  b302835e1c1b_update_department_endpoint_permissions_.py  e7bb773f98d2_add_verification_table.py  eba5e8452ef5_add_cascade.py
backend/app/: config.py  dependencies.py  main.py
backend/app/api/v1/: router.py
backend/app/api/v1/endpoints/: auth.py  department.py  role.py  user.py
backend/app/core/: rbac.py  security.py
backend/app/crud/: auth.py  department.py  role.py  user.py
backend/app/db/: session.py
backend/app/models/: models.py
backend/app/schemas/: departement.py  schemas.py  token.py  user.py
backend/app/scripts/: seed.py
backend/app/services/: email.py
