[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiosqlite==0.20.0",
    "alembic==1.13.3",
    "asyncpg==0.29.0",
    "bcrypt==4.0.1",
    "email-validator>=2.3.0",
    "fastapi==0.115.0",
    "httpx==0.27.2",
    "passlib[bcrypt]==1.7.4",
    "psycopg2-binary==2.9.9",
    "pwdlib[argon2]==0.2.1",
    "pydantic[email]==2.9.2",
    "pydantic-settings==2.5.2",
    "pyjwt==2.9.0",
    "pytest==8.3.3",
    "pytest-asyncio==0.24.0",
    "python-dotenv==1.0.0",
    "python-jose[cryptography]==3.3.0",
    "python-multipart==0.0.12",
    "ruff==0.6.9",
    "sqlalchemy-utils>=0.42.1",
    "sqlalchemy[asyncio]==2.0.35",
    "uvicorn[standard]==0.30.0",
    "fastapi-mail>=1.4.1",
    "pillow==10.4.0",
    "aiofiles==24.1.0",
]
